--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <main class="main">
   <div class="content">
-    <div class="left-side">
-      <h1>Hello, {{ title }}</h1>
-      <p>Congratulations! Your app is running. 🎉</p>
+    <div>
+      <app-home></app-home>
+      <app-galeria></app-galeria>
+      <app-saludos></app-saludos>
     </div>
   </div>
 </main>
