--- a/src/app/galeria/galeria.component.html
+++ b/src/app/galeria/galeria.component.html
@@ -1,1 +1,22 @@
-<p>galeria works!</p>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+
+<body>
+    <div>
+        <div class="card" style="width: 18rem;">
+            <img src={{Galeria.src}} class="card-img-top" alt={{Galeria.alt}}>
+            <div class="card-body">
+                <h3 class="card-title">{{informacion.titulo}}</h3>
+                <p class="card-text">{{informacion.parrafo}}</p>
+                <p class="card-text">{{informacion.fecha.getFullYear()}}</p>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</body>
